base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icc-haedong-reservation-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: icc-haedong-reservation
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: icc-haedong-reservation
    spec:
      containers:
      - image: scgskku/icc-haedong-seminar-reservation
        imagePullPolicy: Always
        name: icc-haedong-reservation
        ports:
        - containerPort: 3000
