base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icc-haedong-reservation-service
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: icc-haedong-reservation
